<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Words</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="ranking">Ranking</string>
    <string name="images">Images</string>
    <string name="dataBaseName">wordsDB.db</string>
    <string name="gameOver">Game Over </string>
    <string name="playAgain">Play Again </string>
    <string name="goStart">Go to Start </string>
    <string name="accept">Accept </string>
    <string name="score">Score </string>
    <string name="user">Introduce Name </string>
    <string name="points">Points: </string>
    <string name="finishGame"> Finish Game </string>
    <string name="preferences"> Preferences </string>
    <string name="help_label">Help</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main menu</string>
    <string name="toggle_music">Play/Pause music</string>
    <string name="help">Help</string>
    <string name="help_text">El joc consisteix en generar la paraula que representa la imatge central, mitjançant les lletres que floten per la pantalla. Un cop es sel·lecciona una lletra aquesta passa a formar part de la paraula. Si la lletra sel·leccionada no és la correcta el joc indica quina és la paraula que s\'havia de completar. Aquest comportament es pot modificar mitjançant les preferències. És a dir, es pot escollir que apareixin les solucions o no. \n\nEs pot tornar a la pantalla principal mitjançant la icona principal del joc a la part superior esquerre de la pantalla. 
        </string>
    <string name="exitHelp">Exit Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="user_name">Name</string>
    <string name="add_user">Add user</string>
    <string name="deleteUser">Delete user</string>
    <string name="pictures">Pictures</string>
    <string name="plusWord">Add Image</string>
    <string name="name_word_to_add">Name</string>
    <string name="level_word_to_add">Level</string>
    <string name="select_image">Select Image</string>
    <string name="commit_word_to_add">Save</string>
    <string name="level_1">Easy</string>
    <string name="level_2">Hard</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Drag and drop image to delete</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="alertDelete">Are you sure to delete?</string>
</resources>