<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >        
        <TextView
            android:id="@+id/nameImageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_word_to_add"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nameImageToAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >            
        </EditText>
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >        
        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_word_to_add"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			
            <RadioButton
                android:id="@+id/level1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/level_1" />

            <RadioButton
                android:id="@+id/level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/level_2" />
        </RadioGroup>            
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:orientation="horizontal" >        

        <Button
            android:id="@+id/selectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/saveFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commit_word_to_add" />

</LinearLayout>