<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
  

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center|right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialogTextGameOver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top|right"
            android:paddingLeft="60dp"
            android:paddingTop="0dp"
            android:text="@string/gameOver"
            android:textColor="@color/white_text"
            android:textSize="27dp" />

        <LinearLayout
            android:layout_width="321dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="30dp" >

            <Button
                android:id="@+id/playAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playAgain" />

            <Button
                android:id="@+id/goStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goStart" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>