<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dip" >
    

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
         android:orientation="vertical" 
         android:layout_weight="0.5"          
         android:layout_margin="20dip" >

        <Button
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:textSize="18dip"
            android:background="@drawable/button_main"
            android:layout_marginTop="8dip"
            android:text="@string/easy" />

        <Button
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_main"
            android:layout_gravity="center"
            android:textSize="18dip"
            android:layout_weight="0.2"
            android:layout_marginTop="8dip"
            android:text="@string/hard" />

        <Button
            android:id="@+id/preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_main"
            android:layout_gravity="center"
            android:layout_marginTop="8dip"
            android:textSize="18dip"
            android:layout_weight="0.2"
            android:text="@string/preferences" />
        
        
        <Button
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_main"
            android:layout_gravity="center"
            android:layout_marginTop="8dip"
            android:textSize="18dip"
            android:layout_weight="0.2"
            android:text="@string/help" />
        
    </LinearLayout>
</LinearLayout>