<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/dialogTextFinishGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top|right"
                android:paddingLeft="60dp"
                android:paddingTop="0dp"
                android:text="@string/finishGame"
                android:textColor="@color/black"
                android:textSize="27dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="30dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center" >

                <Button
                    android:id="@+id/playAgn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playAgain" />

                <Button
                    android:id="@+id/goStrt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goStart" />
            </LinearLayout>
        </LinearLayout>
        
    </LinearLayout>
    

</RelativeLayout>